# v39

./: .gitignore  Cargo.toml  rustc-ice-2024-05-26T13_02_09-18328.txt  rustc-ice-2024-05-26T13_02_09-18329.txt  rustc-ice-2024-05-26T13_02_09-18330.txt
.cargo/: config.toml
app/: Cargo.toml
app/shaders/: default.vert
app/src/: camera.rs  main.rs  scene.rs
doggo/: Cargo.toml
doggo/src/: main.rs
gl-test/: Cargo.toml  build.rs
gl-test/shaders/: base.frag  base.vert  default.frag  default.vert  frag.glsl
gl-test/src/: main.rs
marching_cubes/: Cargo.toml  build.rs
marching_cubes/shaders/: default.frag  default.vert
marching_cubes/src/: main.rs  vol.rs  vol_mesh.rs  voxel_table.rs
math/: Cargo.toml  lib.rs  vector.rs  vector_ops_impl.rs
sample_app/: Cargo.toml
sample_app/src/: main.rs
v39/: Cargo.toml
v39/src/: error.rs  lib.rs  math.rs  prelude.rs  timer.rs
v39/src/event/: event.rs  mod.rs  receiver.rs
v39/src/input/: codes.rs  mod.rs  translate.rs
v39/src/interfaces/: app.rs  event_handler.rs  input_manager.rs  mod.rs  renderer.rs  timer.rs
v39/src/renderer/: allocator.rs  camera.rs  device.rs  ebo.rs  id.rs  image.rs  mod.rs  model.rs  render_prelude.rs  shader.rs  swapchain.rs  texture.rs  vao.rs  vbo.rs
