[package]
name = "v39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
glow = "0.13.1"
log = "0.4.20"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
thiserror = "1.0.53"
raw-window-handle = "0.4.3"
winit = {version="0.29.9", features=["rwh_04"]}
raw-gl-context = {git="https://github.com/PortableNavi/raw-gl-context.git"}
